--- a/extension/stylesheets/overlay.css
+++ b/extension/stylesheets/overlay.css
@@ -1,8 +1,11 @@
-#overlay {
+/* id must not conflict with anything any web page author might choose */
+#tt_overlay_64f9de {
 	position: fixed;
 	bottom: 20px;
 	right: 20px;
 	width: 100px;
 	height:100px;
-	background: blue;
+	border: 1px solid black;
+	border-radius: 5px;
+	background: white;
 }
