showing page titles on the inferences page

--- a/extension/infopage/style.css
+++ b/extension/infopage/style.css
@@ -84,3 +84,9 @@ h6 > a:hover , h3 > a:hover {
 	 padding-top: 8px;
 	 padding-bottom: 8px;
  }
+
+
+ .p-pages {
+	 font-size: 11px;
+	 text-indent: 50px;
+ }
