--- a/extension/infopage/style.css
+++ b/extension/infopage/style.css
@@ -9,7 +9,7 @@ h1 {
   border-bottom: 1px solid #eee;
 }
 h6 > a , h3 > a {
-	color: maroon;
+	color: #800000;
 }
 h6 > a:hover , h3 > a:hover {
 	color: black;
@@ -30,7 +30,7 @@ h6 > a:hover , h3 > a:hover {
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
   border-right: 1px solid #eee;
-	background-color: maroon;
+	background-color: #800000;
 	height: 100%;
 }
 
