--- a/extension/infopage/style.css
+++ b/extension/infopage/style.css
@@ -30,7 +30,7 @@ h6 > a:hover , h3 > a:hover {
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
   border-right: 1px solid #eee;
-	background-color: maroon;
+	background-color: #767676;
 	height: 100%;
 }
 
@@ -74,9 +74,8 @@ h6 > a:hover , h3 > a:hover {
 	 padding-top: 20px;
 	 padding-bottom: 20px;
  }
- .card-header {
-	 padding-bottom: 8px;
- }
+
+
 
 
 
@@ -90,3 +89,13 @@ h6 > a:hover , h3 > a:hover {
 	 font-size: 11px;
 	 text-indent: 50px;
  }
+
+.btn-primary{
+	background-color: maroon;
+	border-color: maroon;
+}
+
+.btn-primary:hover{
+	background-color: #642822;
+	border-color: #642822;
+}
