--- a/extension/infopage/style.css
+++ b/extension/infopage/style.css
@@ -75,13 +75,16 @@ p > a:hover, h6 > a:hover , h3 > a:hover {
 	 padding-bottom: 20px;
  }
 
+
 .domainList {
-    -moz-column-count: 4;
+		/*
+    -moz-column-count: 2;
     -moz-column-gap: 20px;
-    -webkit-column-count: 4;
+    -webkit-column-count: 2;
     -webkit-column-gap: 20px;
-    column-count: 4;
+    column-count: 2;
     column-gap: 20px;
+		*/
 		list-style-type: none;
 }
 
