--- a/extension/lightbeam/css/style.css
+++ b/extension/lightbeam/css/style.css
@@ -2,7 +2,7 @@
 /* ----------- VISUALIZATION ----------- */
 
 .links line {
-  stroke: #D6D6CE;
+  stroke: #767676;
   /* stroke-opacity: 0.6; */
 }
 
