--- a/src/dashboard/App.css
+++ b/src/dashboard/App.css
@@ -34,6 +34,14 @@ h1 {
   margin: 20px;
 }
 
+.filter-row {
+  margin: 10px;
+}
+
+.selected-inference {
+  margin-top: 40px;
+}
+
 .lightbeam-iframe {
   border: none; 
   margin: 0; 
