--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,14 +1,13 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #222;
-  /* width: 100%;
-  height: 100%; 
-  margin: 0;
-  padding: 0; */
+  /* font-size: 1rem;
+  font-weight: 400; */
 }
 
 p {
-  font-size: 12pt;
+  /* font-size: 12pt; */
+  line-height: 1.5;
 }
 
 h1 {
