--- a/src/styles/navbar2.css
+++ b/src/styles/navbar2.css
@@ -9,7 +9,7 @@
   left: 0;
   /* height: 25px; */
   width: 100%;
-  padding: 10px;
+  padding: 15px 20px 15px 20px;
 }
 
 /* hover text for brand */
