--- a/src/styles/popup.css
+++ b/src/styles/popup.css
@@ -1,5 +1,7 @@
 body {
   width: 400px;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 p {
@@ -7,5 +9,6 @@ p {
 }
 
 .content {
-  padding: 30px 10px 10px 10px;
+  padding: 40px 10px 20px 10px;
+  /* width: 100%; */
 }
