overlay improvements - style improvements - refactor overlay as ES6 class - messaging to show inferences in overlay

--- a/extension/stylesheets/overlay.css
+++ b/extension/stylesheets/overlay.css
@@ -5,12 +5,13 @@
 	position: fixed;
 	bottom: 20px;
 	right: 20px;
-	width: 100px;
+	width: 150px;
 	height: 100px;
     padding: 10px;
 	border: 1px solid rgba(0,0,0,0.5);
 	border-radius: 5px;
-	background-color: #D6D6CE;
+	background-color: #8F3931;
+    color: #fff;
 	opacity: 0.9;
 	animation: fadein 0.5s;
     font: 10pt sans-serif;
@@ -31,7 +32,7 @@
 	right: 30px;
     width: 10px;
 	height: 10px;
-	background-color: #D6D6CE;
+	background-color: inherit;
 	opacity: 0.9;
 }
 
