--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,6 +1,23 @@
-p {
-  font-size: 12pt;
-  line-height: 1.5;
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
 }
 
 .inferences-sunburst {
