word cloud resizes

--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -11,12 +11,12 @@ body {
 
 @media (min-width: 768px) {
   .container {
-    width: 750px;
+    width: 98%;
   }
 }
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+    width: 95%;
   }
 }
 @media (min-width: 1200px) {
