--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -9,6 +9,10 @@ body {
   padding-right: 15px;
 }
 
+.containerInner {
+  padding-bottom: 50px;
+}
+
 @media (min-width: 768px) {
   .container {
     width: 98%;
@@ -16,11 +20,11 @@ body {
 }
 @media (min-width: 992px) {
   .container {
-    width: 95%;
+    width: 98%;
   }
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 1180px;
   }
 }
