making the name changeable in the UI

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -6,7 +6,7 @@
   color: #fff;
 }
 
-/* text for "Tracking Transparency" */
+/* text for title */
 .navbar-default .navbar-brand {
   color: #fff;
 }
